examples/test/testpolicy2357.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2357
  namespace: namespace113
spec:
  podSelector:
    matchLabels:
      key30: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value38
      podSelector:
        matchLabels:
          key26: value3
          key11: value17
          key2: value17
